-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P1
-
Affects Version/s: 9
-
Component/s: hotspot
-
b43
-
Verified
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8083299 | emb-9 | Tobias Hartmann | P1 | Resolved | Fixed | team |
The test compiler/startup/SmallCodeCacheStartup.java is expecting to run out of memory in the code cache. So it does, but for some reason the test still exits with exit code 1.
- backported by
-
JDK-8083299 SmallCodeCacheStartup.java exits with exit code 1
-
- Resolved
-
- relates to
-
JDK-8064696 compiler/startup/SmallCodeCacheStartup.java doesn't check exit code
-
- Resolved
-