8066448: SmallCodeCacheStartup.java exits with exit code 1

Check for VirtualMachineError in case VM initialization fails.

Reviewed-by: kvn